plugins {
	id 'java'
    id 'java-library'
	id 'org.springframework.boot' version '3.3.10'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.21.0'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

tasks.named('bootJar') {
    enabled = false
}
tasks.named('jar') {
    enabled = true
}

allprojects {
    group = 'liaison'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.diffplug.spotless'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        // Lombok 설정
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
    }

    // 코드 포맷터 Spotless 설정
    spotless {
        java {
            googleJavaFormat()
            removeUnusedImports()
            importOrder 'java', 'javax', 'jakarta', 'org', 'com', 'liaison', ''
            trimTrailingWhitespace()    // 각 라인 끝의 공백 제거
            endWithNewline()            // 파일 끝에 새 줄 추가
        }
    }
}
